--- a/css/styles.css
+++ b/css/styles.css
@@ -767,6 +767,10 @@ video {
   margin-top: 0.75rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -812,10 +816,6 @@ video {
 
 .h-0\.5 {
   height: 0.125rem;
-}
-
-.h-1\.5 {
-  height: 0.375rem;
 }
 
 .h-10 {
@@ -902,16 +902,16 @@ video {
   width: 0.25rem;
 }
 
-.w-1\.5 {
-  width: 0.375rem;
-}
-
 .w-10 {
   width: 2.5rem;
 }
 
 .w-16 {
   width: 4rem;
+}
+
+.w-2 {
+  width: 0.5rem;
 }
 
 .w-3 {
@@ -1231,9 +1231,9 @@ video {
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 
-.divide-gray-100 > :not([hidden]) ~ :not([hidden]) {
+.divide-light-gray > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-divide-opacity, 1));
+  border-color: rgb(231 229 228 / var(--tw-divide-opacity, 1));
 }
 
 .overflow-hidden {
@@ -1250,6 +1250,10 @@ video {
 
 .whitespace-nowrap {
   white-space: nowrap;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-2xl {
@@ -1306,25 +1310,12 @@ video {
   border-color: rgb(138 155 105 / var(--tw-border-opacity, 1));
 }
 
-.border-\[\#8A9B69\]\/20 {
-  border-color: rgb(138 155 105 / 0.2);
-}
-
 .border-\[\#8A9B69\]\/30 {
   border-color: rgb(138 155 105 / 0.3);
 }
 
 .border-\[\#8A9B69\]\/50 {
   border-color: rgb(138 155 105 / 0.5);
-}
-
-.border-\[\#B35441\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(179 84 65 / var(--tw-border-opacity, 1));
-}
-
-.border-\[\#B35441\]\/20 {
-  border-color: rgb(179 84 65 / 0.2);
 }
 
 .border-\[\#E5DED1\] {
@@ -1337,13 +1328,13 @@ video {
   border-color: rgb(161 107 94 / var(--tw-border-opacity, 1));
 }
 
+.border-accent-warm\/20 {
+  border-color: rgb(161 107 94 / 0.2);
+}
+
 .border-amber-200 {
   --tw-border-opacity: 1;
   border-color: rgb(253 230 138 / var(--tw-border-opacity, 1));
-}
-
-.border-amber-200\/50 {
-  border-color: rgb(253 230 138 / 0.5);
 }
 
 .border-amber-300 {
@@ -1405,24 +1396,18 @@ video {
   background-color: rgb(179 84 65 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[\#F5F1E8\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 241 232 / var(--tw-bg-opacity, 1));
-}
-
 .bg-accent-warm {
   --tw-bg-opacity: 1;
   background-color: rgb(161 107 94 / var(--tw-bg-opacity, 1));
 }
 
+.bg-accent-warm\/20 {
+  background-color: rgb(161 107 94 / 0.2);
+}
+
 .bg-amber-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 243 199 / var(--tw-bg-opacity, 1));
-}
-
-.bg-amber-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 230 138 / var(--tw-bg-opacity, 1));
 }
 
 .bg-amber-50 {
@@ -1718,6 +1703,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-3\.5 {
+  padding-top: 0.875rem;
+  padding-bottom: 0.875rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1891,6 +1881,11 @@ video {
   color: rgb(161 107 94 / var(--tw-text-opacity, 1));
 }
 
+.text-amber-500 {
+  --tw-text-opacity: 1;
+  color: rgb(245 158 11 / var(--tw-text-opacity, 1));
+}
+
 .text-amber-600 {
   --tw-text-opacity: 1;
   color: rgb(217 119 6 / var(--tw-text-opacity, 1));
@@ -2034,11 +2029,6 @@ video {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-black\/10 {
-  --tw-shadow-color: rgb(0 0 0 / 0.1);
-  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .filter {
@@ -2441,6 +2431,16 @@ mark {
   }
 }
 
+.placeholder\:text-text-muted::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(168 162 158 / var(--tw-text-opacity, 1));
+}
+
+.placeholder\:text-text-muted::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(168 162 158 / var(--tw-text-opacity, 1));
+}
+
 .hover\:-translate-x-1:hover {
   --tw-translate-x: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2448,12 +2448,6 @@ mark {
 
 .hover\:translate-x-1:hover {
   --tw-translate-x: 0.25rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-105:hover {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2492,14 +2486,14 @@ mark {
   background-color: rgb(161 107 94 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-accent-warm-hover:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(142 93 82 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-amber-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(253 230 138 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-amber-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 251 235 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-amber-700:hover {
@@ -2536,11 +2530,6 @@ mark {
   background-color: rgb(255 255 255 / 0.1);
 }
 
-.hover\:text-\[\#B35441\]:hover {
-  --tw-text-opacity: 1;
-  color: rgb(179 84 65 / var(--tw-text-opacity, 1));
-}
-
 .hover\:text-accent-warm:hover {
   --tw-text-opacity: 1;
   color: rgb(161 107 94 / var(--tw-text-opacity, 1));
@@ -2559,11 +2548,6 @@ mark {
 .hover\:text-blue-700:hover {
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-gray-600:hover {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-text-primary:hover {
@@ -2604,12 +2588,6 @@ mark {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:shadow-xl:hover {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .focus\:border-\[\#6d7d54\]:focus {
   --tw-border-opacity: 1;
   border-color: rgb(109 125 84 / var(--tw-border-opacity, 1));
@@ -2620,9 +2598,9 @@ mark {
   border-color: rgb(138 155 105 / var(--tw-border-opacity, 1));
 }
 
-.focus\:border-\[\#B35441\]:focus {
+.focus\:border-accent-warm:focus {
   --tw-border-opacity: 1;
-  border-color: rgb(179 84 65 / var(--tw-border-opacity, 1));
+  border-color: rgb(161 107 94 / var(--tw-border-opacity, 1));
 }
 
 .focus\:border-white\/40:focus {
@@ -2652,6 +2630,10 @@ mark {
 
 .focus\:ring-\[\#8A9B69\]\/30:focus {
   --tw-ring-color: rgb(138 155 105 / 0.3);
+}
+
+.focus\:ring-accent-warm\/20:focus {
+  --tw-ring-color: rgb(161 107 94 / 0.2);
 }
 
 .active\:bg-\[\#5a6444\]:active {
@@ -2719,13 +2701,13 @@ mark {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.group:hover .group-hover\:bg-\[\#8A9B69\]\/20 {
-  background-color: rgb(138 155 105 / 0.2);
+.group:hover .group-hover\:bg-accent-warm\/10 {
+  background-color: rgb(161 107 94 / 0.1);
 }
 
-.group:hover .group-hover\:text-\[\#B35441\] {
+.group:hover .group-hover\:text-accent-warm {
   --tw-text-opacity: 1;
-  color: rgb(179 84 65 / var(--tw-text-opacity, 1));
+  color: rgb(161 107 94 / var(--tw-text-opacity, 1));
 }
 
 .group:hover .group-hover\:text-white {
@@ -2848,9 +2830,9 @@ mark {
     padding-right: 1rem;
   }
 
-  .sm\:px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
+  .sm\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   .sm\:py-1 {
